...
                    child: const Text('Otwórz Radar'),
                  ),
                ],
              ),
            );
          },
          child: const Text('Wybierz Atrakcję'),
        ),
        actions: [
          if (Provider.of<AuthService>(context, listen: false).isAdmin)
            IconButton(
              icon: const Icon(Icons.admin_panel_settings),
              tooltip: 'Panel Administratora',
...
